survey: Struct. table; Jacana description

--- a/qa.bib
+++ b/qa.bib
@@ -295,10 +295,16 @@
 	url={http://www.aclweb.org/website/old_anthology/P/P14/P14-1090.pdf}
 }
 
-@article{LeanFreebaseYao,
-	title={Lean Question Answering over Freebase from Scratch},
-	author={Yao, Xuchen},
-	year={2015?},
+@InProceedings{LeanFreebaseYao,
+  author    = {Yao, Xuchen},
+  title     = {Lean Question Answering over Freebase from Scratch},
+  booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Demonstrations},
+  month     = {June},
+  year      = {2015},
+  address   = {Denver, Colorado},
+  publisher = {Association for Computational Linguistics},
+  pages     = {66--70},
+  url       = {http://www.aclweb.org/anthology/N15-3014},
 	url={http://www.cs.jhu.edu/~xuchen/paper/scratch-qa.pdf}
 }
 
