--- a/survey.tex
+++ b/survey.tex
@@ -92,8 +92,7 @@ while \textit{F$_1$ (Yao)} is harmonic mean of answer precision and recall compu
 
 A caveat of these measures is that they put emphasis on the complete
 set of returned answers, rather than just focusing on the top of
-the ranked list.  Thus, in addition IR-style measures are also often
-used.
+the ranked list.  Thus, in addition IR-style measures may be also used.
 \cite{Semantic2014Bordes} uses
 \textit{precision@1} as the proportion of questions that have a correct answer ranked first.
 \textit{MRR} (Mean Reciprocial Rank) can capture the average rank the correct answer appears at,
@@ -104,13 +103,13 @@ even to a scenario with multiple expected correct answers.
 %% increase table row spacing, adjust to taste
 %\renewcommand{\arraystretch}{1.3}
 \centering
-\begin{tabular}{|c|ccc|}
+\begin{tabular}{|c|ccc|cc|cc|}
 \hline
-System & Precision@1 & A\@. Precision & A\@. Recall & F1 (Berant) & F1 (Yao) & MRR & MAP \\ \hline
+System & Prec@1 & APrec. & ARecall & F1 (Berant) & F1 (Yao) & MRR & MAP \\ \hline
 \cite{TreeFreebase2014Yao} &
-	             & 38.8\%         & 45.8\%      & 33.0\%      & 42.0\%   & --- & --- \\
+	        & 38.8\% & 45.8\%  & 33.0\%      & 42.0\%   & --- & --- \\
 \cite{LeanFreebaseYao} &
-	             & ---            & ---         & 44.3\%      & 53.5\%   & --- & --- \\
+	        & ---    & ---     & 44.3\%      & 53.5\%   & --- & --- \\
 \hline
 \end{tabular}
 \vspace*{-0.2cm}
@@ -209,8 +208,8 @@ answered questions,%
 while recall would be the proportion of correctly answered questions to all
 questions altogether --- this definition is shared by
 e.g.\ \cite{TreeEdit2013Yao} and \cite{QuASE}.
-\cite{WatsonOverview} uses \textit{precision@75} to denote a proportion
-of questions that are answered correctly when attempting to answer 75\% of questions.
+\cite{WatsonOverview} uses \textit{precision@70} to denote a proportion
+of questions that are answered correctly when attempting to answer 70\% of questions.
 
 TREC competitions used MRR \citep{TREC8,TREC9,TREC10},
 confidence-weighted score $1/Q \sum_{i=1}^Q \textrm{precision-at-$i$} / i$ \citep{TREC11},
