survey structured: Some more systems; rewrite measures description again

--- a/qa.bib
+++ b/qa.bib
@@ -545,3 +545,57 @@ shareable analysis pipelines},
   year={2014},
   url={http://arxiv.org/abs/1404.2188}
 }
+
+@article{SPKwiatkowski2013,
+  title={Scaling semantic parsers with on-the-fly ontology matching},
+  author={Kwiatkowski, Tom and Choi, Eunsol and Artzi, Yoav and Zettlemoyer, Luke},
+  publisher={Citeseer},
+  url={http://www.aclweb.org/anthology/D13-1161.pdf}
+}
+
+@article{SPReddy2014,
+  title={Large-scale semantic parsing without question-answer pairs},
+  author={Reddy, Siva and Lapata, Mirella and Steedman, Mark},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={2},
+  pages={377--392},
+  year={2014},
+  url={http://www.aclweb.org/anthology/Q14-1030}
+}
+
+@inproceedings{SPCai2013,
+  title={Large-scale Semantic Parsing via Schema Matching and Lexicon Extension.},
+  author={Cai, Qingqing and Yates, Alexander},
+  booktitle={ACL (1)},
+  pages={423--433},
+  year={2013},
+  organization={Citeseer}
+}
+
+@article{SPIntro,
+  title={Learning Semantic Parsers for Natural Language Understanding},
+  author={Liang, Percy},
+  year={2015},
+  url={http://www-cs.stanford.edu/~pliang/papers/semantic-parsing-intro.pdf}
+}
+
+@article{Aqqu,
+  title={More Accurate Question Answering on Freebase},
+  author={Bast, Hannah and Haussmann, Elmar},
+  year={2015},
+  url={http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf}
+}
+
+@article{MTBao2014,
+	title={Knowledge-based question answering as machine translation},
+	author={Bao, Junwei and Duan, Nan and Zhou, Ming and Zhao, Tiejun},
+	year={2014},
+	url={http://research.microsoft.com/en-US/people/nanduan/acl2014.pdf}
+}
+
+@article{STAGG,
+  title={Semantic Parsing via Staged Query Graph Generation: Question Answering with Knowledge Base},
+  author={Chang, Wen-tau Yih Ming-Wei and Gao, Xiaodong He Jianfeng},
+  year={2015},
+  url={http://research.microsoft.com/pubs/244749/ACL15-STAGG.pdf}
+}
