--- a/survey.tex
+++ b/survey.tex
@@ -28,12 +28,13 @@ which holds a large amount of open domain real-world facts.%
 \footnote{Freebase has been phased out into legacy state at this point.
 	WikiData is set to replace it, but the migration of knowledge
 	is still ongoing.}
-QALD is one of the benchmarks for the semantic parsing task, aiming
-to semantically parse a naturally phrased question into a structured
-expression representing a graph query. \citep{SPBerant2014Paraphrase, Semantic2014Bordes}
+QALD is one of the benchmarks for the semantic parsing task \citep{SPIntro}, aiming
+to map a naturally phrased question to a logical form (to be in this case
+executed as a graph query on a knowledge base).
+\citep{SPBerant2014Paraphrase, Semantic2014Bordes}
 
 \citep{Semantic2014Bordes} proposed a classification of QALD methods
-that we will adopt, outlining two general paradigms:
+that we adopt, outlining two general paradigms:
 
 \begin{quote}
 \textbf{Information
@@ -69,47 +70,66 @@ Extra measurements on customized versions of TREC (see below) and WikiQuestions
 datasets are also sometimes published.
 
 There is no complete consensus on benchmarking metrics in this task,
-owing to different strategies in the systems.  Most generate an ordered
-list of answers, and
-\cite{Fader2013Paraphrase} uses \textit{answer precision} as the proportion of returned answers that are true,
-while \textit{question recall} would be the proportion of questions that are correctly answered;
-however,
-\cite{TreeFreebase2014Yao} defines \textit{answer recall} more naturally
-as a proportion of true answers that were returned.
-On the other hand,
-\cite{Semantic2013Berant}
-almost always generates just a single
-answer (or ``precise'' list, in case of a list question)
-for every question and thus measures just the \textit{accuracy}.
+owing to different strategies in the systems.
+In the simplest case, a single query is generated for every question
+and its result is matched with the gold standard
+\citep{Semantic2013Berant}, then we may measure just the \textit{accuracy}
+(i.e. proportion of correctly answered questions).
+
+However, most systems generate a ranked list of candidate answers.
+IR list measures are sometimes used \citep{Fader2013Paraphrase,Semantic2014Bordes}:
+\textit{MRR} (Mean Reciprocial Rank) can capture the average rank the correct answer appears at,
+while \textit{MAP} (Mean Average Precision) is not as intuitively interpretable, but generalizes
+even to a scenario with multiple expected correct answers.
+Aside of that, an option is to consider only correctness of the best answer,
+introducing measures
+\textit{precision@1} as the proportion of questions that have a correct answer ranked first
+(and, if some questions generate no answers, \textit{recall@1} and \textit{F$_1$@1}).
+
+However, the official WebQuestions evaluation script
+of \citep{Semantic2013Berant} considers the complete set
+of returned answers --- this fits e.g. \citep{TreeFreebase2014Yao},
+where answer correctness is treated as a binary classification problem
+and answers classified as true are returned (e.g.\ with logistic regression
+output larger than 0.5 as proposed in \cite{FreebaseQA2014Yao}).
+We term these \textit{answer precision} and \textit{answer recall}.
 The most common measure shared by most papers is F$_1$
 (with recall as a proportion of correct answers found).
 However, even this measure comes in two variations:
 \textit{F$_1$ (Berant)} is average of precision/recall harmonic means per question,%
 \footnote{This is about the same as the accuracy in \cite{Semantic2013Berant} style systems.
 When comparing using this measure in ranked-answers systems,
-a single answer is often forced even if none would be produced for the question otherwise. \citep{TreeFreebase2014Yao}}
-while \textit{F$_1$ (Yao)} is harmonic mean of answer precision and recall computed across all questions.
+a single answer is often forced even if none would be produced for the question otherwise. \citep{FreebaseQA2014Yao}}
+while \textit{F$_1$ (Yao)} is harmonic mean of answer precision and recall computed across all questions,
+which gives an incentive to a system not to answer some questions.
 
-A caveat of these measures is that they put emphasis on the complete
-set of returned answers, rather than just focusing on the top of
-the ranked list.  Thus, in addition IR-style measures may be also used.
-\cite{Semantic2014Bordes} uses
-\textit{precision@1} as the proportion of questions that have a correct answer ranked first.
-\textit{MRR} (Mean Reciprocial Rank) can capture the average rank the correct answer appears at,
-while \textit{MAP} (Mean Average Precision) is not as intuitively interpretable, but generalizes
-even to a scenario with multiple expected correct answers.
+Ultimately, the difference between the two approaches is how strictly are answers
+to list-based questions evaluated and what policy does a system choose for
+picking answers to be evaluated (first, all with score above 0.5, etc.).
+We recommend that to facilitate comparison between systems that make different choices
+and possibly do not emphasize list performance,%
+\footnote{Below, we show that in unstructured QA, it is common to disregard list-based performance.
+Therefore, this aspect is important to hybrid systems.}
+future systems report both metrics that give credit to the best rank of at least
+a single list element (F$_1$@1, MRR), and metrics that strictly rate the appearance
+of all list elements and treat all generated answers as a proposed list (F$_1$ (Berant, Yao), MAP).
+(Systems which generate an answer to each question will have F$_1$@1 equal
+to precision@1 and recall@1.)
 
 \begin{figure}[t]
 %% increase table row spacing, adjust to taste
 %\renewcommand{\arraystretch}{1.3}
 \centering
-\begin{tabular}{|c|ccc|cc|cc|}
+\begin{tabular}{|c|ccc|cccc|}
 \hline
-System & Prec@1 & APrec. & ARecall & F1 (Berant) & F1 (Yao) & MRR & MAP \\ \hline
+System & F$_1$@1 & MRR  & F1 (Berant) & F1 (Yao) & MAP  \\ \hline
 \cite{TreeFreebase2014Yao} &
-	        & 38.8\% & 45.8\%  & 33.0\%      & 42.0\%   & --- & --- \\
+35.4\%           & ---  & 33.0\%      & 42.0\%   & ---  \\
 \cite{LeanFreebaseYao} &
-	        & ---    & ---     & 44.3\%      & 53.5\%   & --- & --- \\
+---              & ---  & 44.3\%      & 53.5\%   & ---  \\
+\hline
+\cite{Semantic2013Berant} &
+35.7\%           & ---  & 35.7\%      & ---      & ---  \\
 \hline
 \end{tabular}
 \vspace*{-0.2cm}
@@ -134,8 +154,10 @@ System & Prec@1 & APrec. & ARecall & F1 (Berant) & F1 (Yao) & MRR & MAP \\ \hlin
 	both the question and answer.
 	Finally, composite features are built for all tuples of question and Freebase features
 	and a logistic regression model predicts the most likely Freebase concept to answer.
-	On WebQuestion+Freebase, this scores F$_1$ (Yao) 42.0\%,
-	with answer precision $38.8\%$ and answer recall $42.0\%$.
+	As \citep{FreebaseQA2014Yao} also further clarifies,
+	on WebQuestion+Freebase, this scores F$_1$ (Yao) 42.0\%,
+	with answer precision $38.8\%$ and answer recall $42.0\%$,
+	and F$_1$@1 $35.4\%$.
 	Without the alignment model, the system has F$_1$ (Yao) 36.9\%.
 	The implementation is open source.
 
@@ -150,17 +172,75 @@ System & Prec@1 & APrec. & ARecall & F1 (Berant) & F1 (Yao) & MRR & MAP \\ \hlin
 
 \subsection{Semantic Parsing Approach}
 
+The semantic parsing field has too many publications to list them all
+in detail here.  Therefore, we chose to restrict ourselves only to
+semantic parsers that report results on unabridged WebQuestions dataset,
+so that we can facilitate easy comparison.
+Most notably, we omit modern semantic parsers preceding the dataset
+\citep{SPKwiatkowski2013, SPCai2013},
+parsers with only partial evaluation \citep{SPReddy2014}
+and parsers using different datasets like WikiAnswers \cite{Fader2013Paraphrase}.
+
+\textbf{Semantic Parsing on Freebase from Question-Answer Pairs (SEMPRE)} \citep{Semantic2013Berant}
+	was the semantic parsing system that first introduced the WebQuestions dataset
+	and remains a popular baseline.
+	It builds a lexicon mapping from phrases to predicates
+	by aligning Freebase to ClueWeb and producing co-occurrence
+	based features, then generates
+	additional predicates \textit{(bridging)}
+	based on neighboring predicates.
+	The baseline WebQuestions+Freebase accuracy is $35.7\%$
+	(as revised in \cite{FreebaseQA2014Yao};
+	this number is equivalent to answer precision, recall and F$_1$
+	as well as these metrics @1
+	for this system as it generates a single answer (or answer list)
+	hypothesis for each question).
+
+%\textbf{Paraphrase-Driven Learning for Open Question Answering (Paralex)} \citep{Fader2013Paraphrase}
+%	also builds a lexicon that maps question word templates to queries,
+%	answer focus to predicates,
+%	as well as between equivalent entities (such as \textt{nyc} and \texttt{New York}).
+%	The lexicon is built based on aligning many paraphrases
+%	of the same question (based on the WikiAnswers dataset),
+%	mapping (in particular of question word templates to queries)
+%	is learned inductively from a set
+%	of 16 hand-written templates.
+%	XXX incomplete
+%	Many candidate queries are produced from the lexicon
+%	and scored by a linear ranking model.
+
+\textbf{Semantic Parsing via Paraphrasing (ParaSempre)} \citep{SPBerant2014Paraphrase}
+	extends the work of \cite{Fader2013Paraphrase} (Paralex)
+	on learning a rich lexicon for logical form translation rules
+	based on the WikiAnswers dataset which contains clusters of
+	equivalent but differently phrased questions.
+	In this paper,
+	five query templates are manually defined, along with
+	eight general transformation rules.
+	From the input question, a number of possible logical forms
+	are generated and then scored by a paraphrase-based model,
+	using features based on word associations and features
+	based on averaged word vector embeddings (as in Sec.~\ref{sec:embeddings})
+	with a generative model for embeddings alignment (similar
+	to \citep{Yu2014Deep} described in detail in Sec.~\ref{sec:anssentsel}).
+	WebQuestions+Freebase accuracy is reported to be $39.9\%$.
+
 \textbf{Open Question Answering Over Curated and Extracted Knowledge Bases (OQA)} \citep{OQA}
 	--- paraphrase (mined operators) $\to$ parse (templates) $\to$ rewrite (mined operators) $\to$ execute (ensemble of KBs).
 	Novel machine learning for inference and answer scoring with hidden variables.
 	Datasets public, open source.
 	WebQuestions F1 35\%, TREC F1 29\%, WikiAnswers F1 8\%.
 
-\textbf{(Paralex)} \citep{Fader2013Paraphrase}
+\citep{Semantic2014Bordes}
 
-\textbf{(SEMPRE)} \citep{SPBerant2014Paraphrase}
+\citep{FreebaseQA2014Yao}
 
+\citep{MTBao2014}
+k
 
+\citep{Aqqu}
+
+\textbf{Semantic Parsing via Staged Query Graph Generation: Question Answering with Knowledge Base (STAGG)} \citep{STAGG}
 
 
 
@@ -200,7 +280,8 @@ in Sec.~\ref{sec:expsetup}.
 
 The typical IR metrics of \textit{MRR} and \textit{MAP} are commonly
 used, as well as \textit{precision}, \textit{recall} and \textit{F$_1$}.
-Consider a question answered correctly if the top-ranked answer is correct:
+Notably, since TREC questions are typically single-answer instead of list-based,
+we consider a question answered correctly if the top-ranked answer is correct:
 then, precision is the proportion of correctly answered questions to all
 answered questions,%
 \footnote{Except some outliers; \cite{Ephyra2006} uses the ``precision'' term
@@ -208,8 +289,10 @@ answered questions,%
 while recall would be the proportion of correctly answered questions to all
 questions altogether --- this definition is shared by
 e.g.\ \cite{TreeEdit2013Yao} and \cite{QuASE}.
-\cite{WatsonOverview} uses \textit{precision@70} to denote a proportion
-of questions that are answered correctly when attempting to answer 70\% of questions.
+\cite{WatsonOverview} uses \textit{precision@70\%} to denote a proportion
+of questions that are answered correctly when attempting to answer 70\% of questions.%
+\footnote{The original papers do not use the percent sign, which we introduce
+	to distinguish from \textit{prec@1} \citep{Semantic2014Bordes}.}
 
 TREC competitions used MRR \citep{TREC8,TREC9,TREC10},
 confidence-weighted score $1/Q \sum_{i=1}^Q \textrm{precision-at-$i$} / i$ \citep{TREC11},
@@ -233,9 +316,9 @@ MAP and MRR reported.
 \textbf{(Jacana)} \citep{TreeEdit2013Yao}
 
 \textbf{Deep Learning for Answer Sentence Selection} \citep{Yu2014Deep}
-	--- given vector embeddings $\mathbf{q}, \mathbf{a}$, estimate
+	estimates, given vector embeddings $\mathbf{q}, \mathbf{a}$,
 	$P(rel|q,a) = \sigma(\mathbf{q}^T \mathbf{M}\, \mathbf{a} + b)$
-	i.e.\ train a model with parameters $\mathbf{M}, b$ that
+	i.e.\ trains a model with parameters $\mathbf{M}, b$ that
 	generates a likely question embedding using $\mathbf{M}\, \mathbf{a}$
 	and then using dot-product measures its distance to the posed question.
 	Cross entropy over all QA pairs is used as the loss function for training.
